--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.0.4",
     "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "css-loader": "^1.0.1",
     "express": "^4.16.4",
     "moment": "^2.29.1",
